--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "db:push": "drizzle-kit push",
     "deploy": "vercel --prod",
     "deploy:preview": "vercel",
-    "vercel:build": "npm run build"
+    "vercel:build": "npm run build",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -79,7 +80,8 @@
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
-    "zod-validation-error": "^3.4.0"
+    "zod-validation-error": "^3.4.0",
+    "vite": "^5.4.19"
   },
   "devDependencies": {
     "@replit/vite-plugin-cartographer": "^0.3.0",
@@ -101,8 +103,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.1",
-    "typescript": "5.6.3",
-    "vite": "^5.4.19"
+    "typescript": "5.6.3"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
